from typing import Optional, Dict, Any, List
# TODO: Import necessary data models from core.shared.data_models (Metric, AppDefinition, JITArtifacts) (Issue #XX)
from sqlmodel import select # Import select for potential database queries (though not directly used in Oracle yet)
from core.shared.data_models.data_models import (
    Metric, # Assuming Metric data model exists
    AppDefinition, # Assuming AppDefinition data model exists
    # JITArtifacts, # Assuming a data model for JIT compilation output exists (Issue #XX)
)

from core.interfaces.optimization_oracle_interface import OptimizationOracleInterface
from core.interfaces.metric_collector_interface import MetricCollectorInterface
from core.interfaces.state_manager_interface import StateManagerInterface

class OptimizationOracle(OptimizationOracleInterface):
    """
    Analyzes operational metrics to identify opportunities for optimizing application performance,
    primarily by orchestrating the Just-In-Time (JIT) compilation of frequently used LLM logic.
    It interacts with the MetricCollector to get performance data and the StateManager
    to access application definitions and store JIT artifacts.
    """
    def __init__(self, metric_collector: MetricCollectorInterface, state_manager: StateManagerInterface):
        """
        Initializes the OptimizationOracle with references to the MetricCollector and StateManager.

        Args:
            metric_collector: An instance of MetricCollectorInterface to retrieve application metrics.
            state_manager: An instance of StateManagerInterface to access and update application definitions and state.
        """
        self.metric_collector = metric_collector
        self.state_manager = state_manager
        # TODO: Initialize internal state for tracking application performance and optimization rules (Issue #XX)
        # self._app_performance_data: Dict[str, Any] = {} # appId: performance metrics
        # self._optimization_rules: Dict[str, Any] = {} # Global or per-app optimization rules

    async def analyze_metrics(self, appId: str): # TODO: Define gRPC method signature if exposed (Issue #XX)
        """
        Analyzes metrics for a specific application to identify optimization opportunities.
        This method would typically be triggered periodically or by specific events.
        For POC, this is a placeholder with simulated logic.

        Args:
            appId: The ID of the application whose metrics should be analyzed.
        """
        print(f"Analyzing metrics for application: {appId}") # Basic logging
        # TODO: Fetch relevant metrics from MetricCollector (Issue #XX)
        # MetricCollectorInterface currently doesn't have a method to get metrics for a specific app.
        # This interaction needs to be defined or metrics need to be accessed differently (e.g., via a metrics storage).
        # For POC, simulate fetching metrics.
        # app_metrics = await self.metric_collector.get_metrics_for_app(appId) # Assuming such a method exists

        # TODO: Apply optimization rules (e.g., if latency for a component is consistently high, or cost is high) (Issue #XX)
        # TODO: Fetch relevant metrics from MetricCollector (Issue #XX)
        # MetricCollectorInterface currently doesn't have a method to get metrics for a specific app.
        # This interaction needs to be defined or metrics need to be accessed differently (e.g., via a metrics storage).
        # For POC, simulate fetching metrics.
        # app_metrics = await self.metric_collector.get_metrics_for_app(appId) # Assuming such a method exists

        print(f"Analyzing metrics for application: {appId}") # Basic logging

        # TODO: Implement actual metric analysis and rule application (Issue #XX)
        # For POC, simulate analysis and decision based on dummy metrics or simple rules.
        # Example simulated metrics (replace with actual data from MetricCollector)
        simulated_metrics = {
            "execution_count": 100,
            "average_latency_ms": 500,
            "error_rate": 0.01
        }

        optimization_needed = False
        reason = ""

        # Example simulated optimization rule: Trigger JIT if average latency > 200ms and execution count > 50
        if simulated_metrics.get("average_latency_ms", 0) > 200 and simulated_metrics.get("execution_count", 0) > 50:
            optimization_needed = True
            reason = "High average latency and sufficient execution count."
            print(f"Simulated analysis: Optimization recommended for {appId} due to {reason}") # Basic logging

        # TODO: Add more complex rules based on cost, error rate, resource usage, etc. (Issue #XX)

        if optimization_needed:
            print(f"Optimization opportunity identified for {appId}. Triggering optimization: {reason}") # Basic logging
            # Trigger the optimization process
            await self.trigger_optimization(appId)
        else:
            print(f"No optimization needed for {appId} at this time.") # Basic logging


    async def trigger_optimization(self, appId: str): # TODO: Define gRPC method signature if exposed (Issue #XX)
        """
        Initiates the optimization process (e.g., JIT compilation) for a specific application.
        This involves preparing the necessary data and interacting with a JIT compilation service.
        For POC, this is a placeholder.

        Args:
            appId: The ID of the application to optimize.
        """
        print(f"Triggering optimization for application: {appId}") # Basic logging
        # TODO: Implement the actual logic to trigger JIT compilation. (Issue #XX)
        # This might involve:
        # 1. Identifying the specific component(s) to optimize based on analysis. (Issue #XX)
        # 2. Extracting the relevant LLM logic/prompt/workflow from the AppDefinition (via StateManager). (Issue #XX)
        # 3. Sending this logic to a JIT compilation service (not yet defined). (Issue #XX)
        # 4. Updating the AppDefinition in the StateManager to mark the component as 'optimizing' or similar status. (Issue #XX)

        # Example placeholder: Update AppDefinition state to indicate optimization in progress
        # This requires StateManager to have a method to update parts of the definition or use apply_definition_diff
        # await self.state_manager.set_app_status(appId, "optimizing") # Assuming StateManager has this method (Issue #XX)
        print(f"Placeholder: JIT compilation process triggered for {appId}. Actual compilation pending.") # Basic logging


    async def apply_optimization(self, appId: str, optimized_artifacts: Dict[str, Any]): # TODO: optimized_artifacts is JITArtifacts data model (Issue #XX) # TODO: Define gRPC method signature if exposed (Issue #XX)
        """
        Applies the results of an optimization (e.g., JIT compiled code) to an application's definition.
        This involves storing the artifacts and updating the application's execution path.
        For POC, this is a placeholder.

        Args:
            appId: The ID of the application to apply optimization to.
            optimized_artifacts: The artifacts produced by the optimization process (e.g., compiled code, metadata).
                                 Assumes this conforms to the JITArtifacts data model.
        """
        print(f"Applying optimization artifacts for application: {appId}") # Basic logging
        # TODO: Implement the actual logic to apply optimization artifacts. (Issue #XX)
        # This might involve:
        # 1. Storing the optimized_artifacts (e.g., compiled code, new configuration) in the definition state via StateManager. (Issue #XX)
        # 2. Updating the AppDefinition in the StateManager to change the execution path for the optimized component
        #    from LLM to the new JIT artifact. (Issue #XX)
        # 3. Potentially notifying the SandboxManager to reload the application's configuration or restart sandboxes. (Issue #XX)

        # Example placeholder: Store artifacts and update definition
        # await self.state_manager.set_definition_file_content(appId, "jit_artifacts.json", json.dumps(optimized_artifacts), f"Applied JIT artifacts for {appId}") # Assuming artifacts are JSON serializable (Issue #XX)
        # await self.state_manager.update_app_definition(appId, {"components": {"optimized_component_id": {"execution_type": "jit", "artifact_ref": "jit_artifacts.json"}}}) # Assuming update method exists (Issue #XX)

        print(f"Placeholder: Optimization artifacts applied for {appId}. Application definition updated.") # Basic logging

    # TODO: Add internal methods for loading/managing optimization rules (Issue #XX)
    # TODO: Add internal methods for interacting with StateManager to update AppDefinition for JIT (Issue #XX)
    # TODO: Add internal methods for interacting with a JIT compilation service (Issue #XX)
    # TODO: Consider adding methods for monitoring the status of optimization jobs (Issue #XX)
